# dlt-demo

./: README.md  async_pipeline.py  chess_pipeline.duckdb  pyproject.toml  sync_pipeline.py
