[tool.poetry]
name = "dlt-demo"
version = "0.1.0"
description = ""
authors = ["tobias <tobias@tobias-leong.dev>"]
readme = "README.md"
packages = [{include = "dlt_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
duckdb = "^0.8.1"
dlt = "^0.3.3"
chess = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
